name updates and added new stuff

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -36,53 +36,69 @@
                     I hope you enjoy it!
                 </div>
             </div>
+            <!--
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bean_spax_1.png"></img><br>
+                    <img src="../images/misc/fanart/bananas_WHAT.png"></img><br>
+                    Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>...
+                </div>
+            </div>
+            -->
+            <div class="fart-text-box fart-flex-container unselectable">
+                <div>
+                    <img src="../images/misc/fanart/minty_nahua.png"></img><br>
+                    Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container unselectable">
+                <div>
+                    <img src="../images/misc/fanart/bean_nahua_1.png"></img><br>
                     Drawn by <a href="https://discord.com/users/685328250548781066/" target="_blank">bean</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/gunk_neko.png"></img><br>
+                    <img src="../images/misc/fanart/gunk_neko_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/518490426261372931/" target="_blank">gunk</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/uray_neko.png"></img><br>
+                    <img src="../images/misc/fanart/uray_neko_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/260236669041639425/" target="_blank">URAY</a><br>(requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/n3therwolf_spax.jpg"></img><br>
+                    <img src="../images/misc/fanart/n3therwolf_nahua.jpg"></img><br>
                     Drawn by <a href="https://discord.com/users/907467523090448414/" target="_blank">N3therwolf</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/cyus_spax.png"></img><br>
+                    <img src="../images/misc/fanart/cyus_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/284123108212867074/" target="_blank">Cyus</a>
-                </div>
-            </div>
-            <div class="fart-text-box fart-flex-container unselectable">
-                <div>
-                    <img src="../images/misc/fanart/minty_spax.jpg"></img><br>
-                    Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
                 </div>
             </div>
             <!--
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_spax_idle.gif"></img><br>
+                    <img src="../images/misc/fanart/minty_nahua_old.jpg"></img><br>
+                    Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
+                </div>
+            </div>
+            -->
+            <!--
+            <div class="fart-text-box fart-flex-container unselectable">
+                <div>
+                    <img src="../images/misc/fanart/bananas_nahua_idle.gif"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(commission)
                 </div>
             </div>
             -->
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/timber_spax_group.png"></img><br>
+                    <img src="../images/misc/fanart/timber_nahua_group.png"></img><br>
                     Drawn by <a href="https://discord.com/users/650333611475730433/" target="_blank">Timber</a>
                 </div>
             </div>
@@ -96,13 +112,13 @@
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_spax_3-2.png"></img><br>
+                    <img src="../images/misc/fanart/bananas_nahua_3-2.png"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(partially requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_spax_2-2.gif"></img><br>
+                    <img src="../images/misc/fanart/bananas_nahua_2-2.gif"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(partially requested)
                 </div>
             </div>
