sitelist update for fanart

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -60,6 +60,12 @@
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
+                <a href=fanart>Fanart!</a><br>
+                This is where I post all fanart of my character, Nahua! Please check out the cool artists who made them!
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
                 <a href=isspaxatschool>Is Spax At School?</a><br>
                 This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not, but it doesn't fully work right now. I'll overhaul it another time, but just know that this exists.
                 </div>
