--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -46,7 +46,7 @@
             </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
-                    (And <a href="../html/index">click here</a> to go back to the main page!)
+                    (And <a href="../html/main.html">click here</a> to go back to the main page!)
                 </div>
             </div>
             <script src="../js/timezonething.js" type=text/javascript></script>
