--- a/html/main.html
+++ b/html/main.html
@@ -23,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                     <a href="../html/sitelist">Click here</a> to see my full site list!<br>
-                    -Spax</span>
+                    -Spax
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
