fixed an extra div tag

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -250,7 +250,7 @@
                 <div>
                         <img src="
                     ../images/faces/yoki/Look.png
-                        "></img></div>
+                        "></img>
                     Well...<br>
                     No use laying around in bed.
                 </div>
